--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,280 +1,356 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.flex-row{
+
+.flex-row {
     display: flex;
 }
-.flex-col{
+
+.flex-col {
     display: flex;
     flex-direction: column;
 }
+
 /* Header Section Start  */
-header{
+header {
     width: 100vw;
     display: flex;
     justify-content: center;
     text-align: center;
 }
-.main-header-container{
+
+.main-header-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 70%;
 }
-.center-box{
+
+.center-box {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
-.logo img{
+
+.logo img {
     width: 90px;
     height: 130px;
 }
+
 header p {
     padding: 15px 0;
     color: rgb(99, 98, 98);
     font-style: italic;
     font-size: 17px;
 }
-.highlight{
+
+.highlight {
     color: #D7752B;
     position: relative;
     display: inline-block;
 }
-.line{
+
+.line {
     width: 50px;
     height: 2px;
     background-color: #47a39e;
     margin: auto;
 }
+
 /* Header Section End  */
 
 /* NavBar Section Start  */
-.navbar{
+.navbar {
     display: flex;
     justify-content: center;
 }
-.navlinks{
+
+.navlinks {
     height: 50px;
     display: flex;
     align-items: center;
 }
-.navlinks a{
+
+.navlinks a {
     text-decoration: none;
     font-size: 20px;
     font-weight: bolder;
     color: black;
 }
+
 /* NavBar Section End  */
 
 /* Main Section Start  */
-section{
+section {
     display: flex;
     justify-content: center;
     width: 100vw;
     margin-top: 20px;
 }
-.main-container{
+
+.main-container {
     display: flex;
     width: 80%;
 }
-.main-container-left{
+
+.main-container-left {
     width: 25%;
 }
-.main-container-right{
+
+.main-container-right {
     width: 75%;
-   display: flex;
-   flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
+
 /* Left Section Start  */
-.left-section{
-    margin-right:10px;
+.left-section {
+    margin-right: 10px;
 }
-.top-stories{
+
+.top-stories {
     background-color: black;
     color: white;
     padding: 5px 10px;
     font-size: 25px;
     border-radius: 10px;
-   text-align: center;
-   margin: 30px 0;
-   width: 150px;
+    text-align: center;
+    margin: 30px 0;
+    width: 150px;
 }
-.left-section-box{
+
+.left-section-box {
     padding: 15px 0;
 }
-.left-section-box span{
+
+.left-section-box span {
     color: #02BB9B;
     font-weight: bolder;
 }
-.left-section-box a{
+
+.left-section-box a {
     text-decoration: none;
     font-size: 25px;
     font-weight: bolder;
     color: black;
 }
-.title{
+
+.title {
     width: 80%;
 }
-.card{
+
+.card {
     display: flex;
 }
-.card img{
+
+.card img {
     margin-left: 5px;
     width: 180px;
     height: 100px;
 }
-.card p{
-   line-height: 25px;
-   color: rgb(94, 94, 94);
-   font-style: italic;
+
+.card p {
+    line-height: 25px;
+    color: rgb(94, 94, 94);
+    font-style: italic;
 }
+
 /* Left Section End  */
 /* Center Section Start  */
-.center-section{
+.center-section {
     width: 70%;
     margin: 0 10px;
 }
-.center-section-first-box{
+
+.center-section-first-box {
     text-align: center;
 }
-.center-section-first-box img{
+
+.center-section-first-box img {
     width: 100%;
 }
-.center-section-first-box a{
+
+.center-section-first-box a {
     text-decoration: none;
     color: black;
     font-size: 30px;
     font-weight: bolder;
 }
-.recommended{
+
+.recommended {
     background-color: black;
     color: white;
     padding: 5px;
     font-size: 25px;
     border-radius: 10px;
-   text-align: center;
-   width: 250px;
-   margin-top: 30px;
+    text-align: center;
+    width: 250px;
+    margin-top: 30px;
 }
-.second-box-container{
+
+.second-box-container {
     border: 2px solid black;
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-.second-box-container .box-1{
+
+.second-box-container .box-1 {
     width: 40%;
     height: 250px;
     margin: 20px;
 }
-.second-box-container .box-1 img{
+
+.second-box-container .box-1 img {
     width: 100%;
     height: 200px;
 }
-.second-box-container .box-1 a{
+
+.second-box-container .box-1 a {
     text-decoration: none;
     color: black;
     font-size: 20px;
     font-weight: bolder;
 }
-.center-section-third-box{
+
+.center-section-third-box {
     margin: 40px 0;
     text-align: center;
 }
-.center-section-third-box p{
+
+.center-section-third-box p {
     font-size: 30px;
 }
-.center-section-fourth-box{
-   text-align: center;
+
+.center-section-fourth-box {
+    text-align: center;
 }
-.logo2{
+
+.logo2 {
     margin: 50px 0;
 }
-.logo2 img{
+
+.logo2 img {
     width: 25px;
     height: 35px;
 }
-.logo2 span{
+
+.logo2 span {
     font-size: 30px;
-    color:#2b6966;
+    color: #2b6966;
 }
-.logo2 a{
+
+.logo2 a {
     text-decoration: none;
     font-size: 30px;
-    color:#2b6966;
+    color: #2b6966;
 }
-.center-section-fourth-box video{
+
+.center-section-fourth-box video {
     width: 300px;
     height: 200px;
 }
-.video-box{
+
+.video-box {
     display: flex;
     justify-content: space-around;
 }
-.video-box-1{
+
+.video-box-1 {
     width: 300px;
     height: 200px;
 }
-.video-box-1 a{
+
+.video-box-1 a {
     text-decoration: none;
     color: black;
 
 }
-.video-box img{
-   width: 100%;
-   height: 80%;
+
+.video-box img {
+    width: 100%;
+    height: 80%;
 }
+
 /* Center Section End  */
 /* Right Section Start  */
 
-.right-section{
+.right-section {
     width: 30%;
     margin-left: 10px;
 }
-.popular-box{
+
+.popular-box {
     border: 2px solid orange;
 }
-.popular{
+
+.popular {
     font-size: 25px;
     width: 100%;
     background-color: rgb(226, 238, 226);
     padding: 10px;
     letter-spacing: 5px;
 }
-.popular-box span{
-    background-color:  rgb(226, 238, 226);
+
+.popular-box span {
+    background-color: rgb(226, 238, 226);
     padding: 5px 10px;
     border-radius: 100%;
 }
-.popular-box p{
+
+.popular-box p {
     margin: 20px;
 }
+
 /* Footer Start  */
-footer{
+footer {
     width: 100vw;
     display: flex;
     justify-content: center;
 }
-.footer-main-container{
+
+.footer-main-container {
     width: 80%;
     display: flex;
 }
-.social-icon img{
+
+.social-icon img {
     width: 30px;
     height: 40px;
 
 }
-.footer-main-container .links{
-    margin-left: 100px;
+
+.footer-main-container .links {
+    margin: 0 50px;
     padding: 30px 0;
 }
-.footer-main-container .links a{
+
+.footer-main-container .links a {
     text-decoration: none;
     color: black;
-    
+
+}
+
+.develop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.develop img {
+    width: 40px;
+    height: 40px;
+    margin-top: 10px;
+    border-radius: 100%;
+}
+
+.develop a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-weight: 500;
 }
