--- a/CSS/style.css
+++ b/CSS/style.css
@@ -316,6 +316,7 @@ footer {
 .footer-main-container {
     width: 80%;
     display: flex;
+    justify-content: space-between;
 }
 
 .social-icon img {
